k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-app
  namespace: hermes
  labels:
    app.kubernetes.io/name: hermes-app
    app.kubernetes.io/part-of: hermes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hermes-app
  template:
    metadata:
      labels:
        app: hermes-app
    spec:
      containers:
        - name: web
          image: ghcr.io/dolfino/hermes-app:70249e71ded47b9af7a4b0a38e42c59be4bdaa9c
          ports:
            - containerPort: 3000
              name: http
          resources:
            limits:
              cpu: "500m"
              memory: 256Mi
            requests:
              cpu: "100m"
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
